2009-04-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: parallel make fixes.
	This patch fixes a couple of testsuite bugs exposed with
	`MAKE=make\ -jN make check'.
	* tests/libtoo10.test: Do not run `clean' in same $MAKE
	invocation as `all check'.  Fixes test failure with parallel
	NetBSD `make -jN'.
	* tests/nobase.test: Be sure to create a directory before
	creating files in it.  Fixes test failure with MAKE=`make -jN'
	for NetBSD make.  This issue is hidden with parallel GNU make
	due to its parallel breadth first update order.
	* tests/parallel-tests3.test: Skip if $MAKE contains `-j',
	GNU make will use the environment variable $MAKE for recursion
	and thus run in parallel even if `$MAKE -j1' was used on the
	command line in the test.  Also, after running the test proper,
	wait long enough so that background jobs have finished and there
	are no open files left when the cleanup code runs.

2009-04-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	silent-rules reorganization, --enable-silent-rules switch.
	This patch introduces a configure-time option to set the default
	verbosity.  Since configure now needs to know whether the
	`silent-rules' automake option was set, the latter can only be
	set within AM_INIT_AUTOMAKE, or with a new AM_SILENT_RULES macro
	but not any more through AUTOMAKE_OPTIONS or the automake
	command line option `--silent-rules'.
	* automake.in (define_verbose_var): Define the default verbose
	variable in terms of `$(AM_DEFAULT_VERBOSITY)'.
	(handle_configure): Do not pass `--silent-rules' to automake.
	(scan_autoconf_traces): Trace `AM_SILENT_RULES'.  If seen,
	enable global `silent-rules' option.
	(usage): Do not document `--silent-rules'.
	(parse_arguments): Do not accept `--silent-rules'.
	* doc/automake.texi (Options): Overhaul.  Document
	AM_SILENT_RULES, --enable-silent-rules, --disable-silent-rules,
	AM_DEFAULT_VERBOSITY.  Show an example for user-added variables
	for less verbose output.