@@ -19,9 +19,7 @@
 
 # This test has a few sister tests, for java, info, libtool.
 
-
-# non-root should catch 'chmod a-r'-challenged file systems.
-required='non-root makeinfo'
+required='makeinfo'
 . ./defs || Exit 1
 
 set -e
@@ -59,6 +57,7 @@ $MAKE uninstall
 for file in info1.info
 do
   chmod a-r $file
+  test ! -r $file || Exit 77
   $MAKE install-data && Exit 1
   chmod u+r $file
 done
