@@ -19,9 +19,6 @@
 
 # This is the java sister test of instfail.test.
 
-
-# non-root should catch 'chmod a-r'-challenged file systems.
-required='non-root'
 . ./defs || Exit 1
 
 set -e
@@ -59,6 +56,7 @@ $MAKE uninstall
 for file in java1.class
 do
   chmod a-r $file
+  test ! -r $file || Exit 77
   $MAKE install-data && Exit 1
   chmod u+r $file
 done
