@@ -18,7 +18,6 @@
 
 # This is the mans sister test of instmany.test, see there for details.
 
-required=non-root    # hope to catch 'chmod a-r'-challenged file systems.
 . ./defs || Exit 1
 
 set -e
@@ -137,6 +136,7 @@ srcdir=../../$subdir
 
 for file in page3.1 page$nfiles.1 npage3.1 npage$nfiles.1; do
   chmod a-r $srcdir/$file
+  test ! -r $srcdir/$file || Exit 77
   $MAKE install-man1 && Exit 1
   chmod u+r $srcdir/$file
 done
