@@ -18,7 +18,7 @@
 
 # This is the python sister test of instmany.test, see there for details.
 
-required='non-root python'
+required='python'
 . ./defs || Exit 1
 
 set -e
@@ -123,6 +123,7 @@ srcdir=../../$subdir
 for file in python3.py python$nfiles.py
 do
   chmod a-r $srcdir/$file
+  test ! -r $srcdir/$file || Exit 77
   $MAKE install && Exit 1
   chmod u+r $srcdir/$file
 done
