@@ -26,8 +26,6 @@
 # For texinfos, we expand names using $(srcdir) in the first place.
 # Let's hope nobody uses many texinfos.
 
-
-required=non-root    # hope to catch 'chmod a-r'-challenged file systems.
 . ./defs || Exit 1
 
 set -e
@@ -153,6 +151,7 @@ srcdir=../../$subdir
 for file in script3 script$nfiles
 do
   chmod a-r $srcdir/$file
+  test ! -r $srcdir/$file || Exit 77
   $MAKE install-binSCRIPTS && Exit 1
   chmod u+r $srcdir/$file
 done
