@@ -68,9 +68,11 @@ grep baz.test stdout || Exit 1
 
 # If we cannot read the log file, then redo it as well.
 chmod a-r foo.log
-$MAKE recheck >stdout && { cat stdout; Exit 1; }
-cat stdout
-grep foo.test stdout || Exit 1
+if test ! -r foo.log; then
+   $MAKE recheck >stdout && { cat stdout; Exit 1; }
+   cat stdout
+   grep foo.test stdout || Exit 1
+fi
 
 # Ensure that recheck builds check_SCRIPTS, and that
 # recheck reruns nothing if check has not been run.
