@@ -1,5 +1,17 @@
 2009-04-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	testsuite: do not fail on systems without read permissions.
+	* tests/instfail-info.test: Do not use the `non-root'
+	requirement for testing whether files may be made unreadable;
+	instead use `test -r' and skip the test if that still works.
+	* tests/instfail-java.test: Likewise.
+	* tests/instfail-libtool.test: Likewise.
+	* tests/instfail.test: Likewise.
+	* tests/instmany-mans.test: Likewise.
+	* tests/instmany-python.test: Likewise.
+	* tests/instmany.test: Likewise.
+	* tests/parallel-tests9.test: Likewise.
+
 	testsuite: parallel make fixes.
 	This patch fixes a couple of testsuite bugs exposed with
 	`MAKE=make\ -jN make check'.
